--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.5.3",
+    "remix-themes": "^2.0.4",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
