--- a/package.json
+++ b/package.json
@@ -10,26 +10,40 @@
   },
   "dependencies": {
     "@react-router/fs-routes": "^7.6.0",
-    "@react-router/node": "^7.5.3",
-    "@react-router/serve": "^7.5.3",
-    "cva": "npm:class-variance-authority",
-    "isbot": "^5.1.27",
+    "@react-router/node": "^7.6.0",
+    "@react-router/serve": "^7.6.0",
+    "cva": "npm:class-variance-authority@0.7.1",
+    "isbot": "^5.1.28",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.5.3",
+    "react-router": "^7.6.0",
     "remix-themes": "^2.0.4",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
-    "@react-router/dev": "^7.5.3",
-    "@tailwindcss/vite": "^4.1.4",
-    "@types/node": "^20",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "tailwindcss": "^4.1.4",
+    "@eslint/js": "^9.27.0",
+    "@react-router/dev": "^7.6.0",
+    "@tailwindcss/vite": "^4.1.7",
+    "@types/node": "^20.17.47",
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.5",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-github": "^6.0.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-sonarjs": "^3.0.2",
+    "globals": "^16.1.0",
+    "tailwindcss": "^4.1.7",
     "typescript": "^5.8.3",
-    "vite": "^6.3.3",
+    "typescript-eslint": "^8.32.1",
+    "vite": "^6.3.5",
     "vite-tsconfig-paths": "^5.1.4"
-  }
+  },
+  "trustedDependencies": [
+    "@tailwindcss/oxide",
+    "unrs-resolver"
+  ]
 }
